app/assets/stylesheets/application.css.scss
/* ... */
/* new class, so submit button in navbar can be grouped with search input */
.navbar-input-group {
  @media (min-width: $screen-sm) {
    font-size: 0px; /*removes whitespace between button and input*/

    input {
      border-top-right-radius: 0px;
      border-bottom-right-radius: 0px;
    }
    .btn {
      border-top-left-radius: 0px;
      border-bottom-left-radius: 0px;
      border-left: 0px;
    }
  }
  @media (max-width: $screen-xs-max) {
    margin-top:0px;
    margin-bottom:0px;

    .btn {
      width:100%;
    }
  }
}

#layout-first-nav {
  font-size: $font-size-smallish;
  margin-bottom: 0;

  .navbar-input-group {
    &.navbar-form {
      padding-right: 0;
    }

    input.form-control {
      @include search-input;

      border-radius: 0;
      border-color: $dark-grey;
      background-color: $white;
      font-size: $font-size-smallish;
    }

    .btn {
      border-radius: 0;
      background-color: $dark-grey;
      border-color: $dark-grey;
      color: $white;
    }
  }
}

#layout-top-navigation {
  padding-right: 0;
}

#layout-second-nav {
  margin-bottom: 0;

  .logo {
    width: 244px;
    height: 116px;
    background-color: $white;
    text-indent: -99999px;
    background-image: image-url('nav_logo.png');
    vertical-align: top;
  }

  ul.sections {
    margin-top: 10px;
    margin-bottom: 0;
    list-style-type: none;
    padding: 0;
    float: left;

    li {
      display: inline-block;
      text-align: center;
      width: 104px;
      text-transform: uppercase;
      font-size: 16px;

      a {
        display: block;
        color: $dark-grey;
        &:hover {
          text-decoration: underline;
        }
      }
    }
  }
}

#layout-photo-slideshow {
  height: 290px;
  background-color: $light-grey;

  & > div > div {
    height: 100%;
    width: 100%;
  }

  position: relative;
  top: 0px;
  left: 0px;

  .gallery {
    height: 100%;
    width: 100%;

    position: absolute;
    left: 0px;
    top: 0px;
    overflow: hidden;

    &.multiple {
      cursor: move;
    }
  }

  /* jssor slider bullet navigator skin 16 css */
  /*
  .jssorb16 div           (normal)
  .jssorb16 div:hover     (normal mouseover)
  .jssorb16 .av           (active)
  .jssorb16 .av:hover     (active mouseover)
  .jssorb16 .dn           (mousedown)
  */
  .jssorb16 {
    position: absolute;
    bottom: 16px;
    left: 6px;

    div[u=prototype] {
      position: absolute;
      width: 21px;
      height: 21px;
    }
  }
  .jssorb16 div, .jssorb16 div:hover, .jssorb16 .av {
      background: image-url('jquery-slider/b16.png') no-repeat;
      overflow:hidden;
      cursor: pointer;
  }
  .jssorb16 div { background-position: -5px -5px; }
  .jssorb16 div:hover, .jssorb16 .av:hover { background-position: -35px -5px; }
  .jssorb16 .av { background-position: -65px -5px; }
  .jssorb16 .dn, .jssorb16 .dn:hover { background-position: -95px -5px; }

  /* jssor slider arrow navigator skin 02 css */
  /*
  .jssora02l              (normal)
  .jssora02r              (normal)
  .jssora02l:hover        (normal mouseover)
  .jssora02r:hover        (normal mouseover)
  .jssora02ldn            (mousedown)
  .jssora02rdn            (mousedown)
  */
  .jssora02l {
    width: 55px;
    height: 55px;
    top: 123px;
    left: 8px;
  }
  .jssora02r {
    width: 55px;
    height: 55px;
    top: 123px;
    right: 8px
  }
  .jssora02l, .jssora02r, .jssora02ldn, .jssora02rdn {
    position: absolute;
    cursor: pointer;
    display: block;
    background: image-url('jquery-slider/a02.png') no-repeat;
    overflow:hidden;
  }
  .jssora02l { background-position: -3px -33px; }
  .jssora02r { background-position: -63px -33px; }
  .jssora02l:hover { background-position: -123px -33px; }
  .jssora02r:hover { background-position: -183px -33px; }
  .jssora02ldn { background-position: -3px -33px; }
  .jssora02rdn { background-position: -63px -33px; }
}

#layout-fit-my-car {
  min-height: 88px;
  background-color: $dark-grey;
  background-image: image-url('bg_fit_my_car.jpg');
  background-position: 50% 0;
  background-repeat: no-repeat;
  background-size: cover;
  color: $white;

  .icon {
    display: inline-block;
    vertical-align: top;
    margin-top: 23px;
  }

  .vehicle-selector {
    margin-top: 24px;
    display: inline-block;
    float: right;

    .selector {
      display: inline-block;
      height: 41px;
      box-sizing: border-box;
      background-color: $white;
      border: 1px solid $black;
      vertical-align: top;

      &.go {
        background-color: $green;
        color: $white;
        border-radius: 4px;
        text-transform: uppercase;
      }
    }

    @media (max-width: $screen-xs-max) {
      display: block;
      float: none;

      .selector, .go {
        width: 100%;
        display: block;
        margin-bottom: $grid-gutter-width / 4;
      }
    }

    /* Small devices (tablets, 768px and up) */
    @media (min-width: $screen-sm-min) {
      .make {
        width: 100px;
        margin-right: 16px;
      }

      .model {
        width: 181px;
        margin-right: 16px;
      }

      .series {
        width: 104px;
        margin-right: 16px;
      }

      .go {
        width: 54px;
      }
    }

    /* Medium devices (desktops, 992px and up) */
    @media (min-width: $screen-md-min) {
      .make {
        width: 190px;
        margin-right: 16px;
      }

      .model {
        width: 301px;
        margin-right: 16px;
      }

      .series {
        width: 104px;
        margin-right: 16px;
      }

      .go {
        width: 54px;
      }
    }

    /* Large devices (large desktops, 1200px and up) */
    @media (min-width: $screen-lg-min) {
      .make {
        width: 207px;
        margin-right: 16px;
      }

      .model {
        width: 371px;
        margin-right: 16px;
      }

      .series {
        width: 104px;
        margin-right: 16px;
      }

      .go {
        width: 54px;
      }
    }
  }
}
/* ... */

